# g-adopt.github.io

./: .gitignore  .index.html.swp  .w3.css.swp  CNAME  README.md  contributors.html  examples.html  gadopt.bib  gadopt_gia.bib  gadopt_mc.bib  index.html  mkdocs.yml  pyproject.toml  requirements.txt  w3.css
.github/workflows/: build.yml
docs/: about.md  benchmarks.md  contact.md  documentation.md  events.md  funding.md  index.md  install.md  media.md  partners.md  publications.md  team.md  tutorials.md
docs/documentation/: dev.md  index.md
docs/documentation/api/: CONTENTS.md
docs/events/workshops/: index.md
docs/events/workshops/posts/: 2022-workshop.md  2023-workshop.md  2024-Sete.md  2024-workshop.md  2025-gia-workshop.md  2025-visits.md  2025-workshop.md
docs/javascripts/: httpsceneviewer.js  mathjax.js  open-external.js
docs/static/: viewer.html
docs/stylesheets/: gadopt.css  team.css
docs/tutorials/: gia.md  index.md  mantle-convection.md
docs/tutorials/glacial_isostatic_adjustment/: index.md
docs/tutorials/mantle_convection/: index.md
examples/: example_1_1.html  example_2_1.html  example_2_2.html  example_2_3.html  example_3_1.html  example_3_2.html
overrides/: main.html
overrides/partials/: header.html  post.html
scripts/: gen_api_pages.py
